--- a/src/Components/ImageEditor/imageEditor.css
+++ b/src/Components/ImageEditor/imageEditor.css
@@ -20,8 +20,12 @@ canvas {
 /*}*/
 
 #result-layer {
-    z-index: -9;
+    z-index: -5;
     /*margin-top: 26px;*/
+}
+
+#polygon-layer {
+    z-index: -8;
 }
 
 #mouse-coordinator {
